# nesnes

./: .gitignore  Cargo.toml  README.md  dbb5mem.txt  dbb5suc.txt  foo.txt  makelog.bat
src/: bus.rs  cart.rs  cpu.rs  decode.rs  easy6502.rs  emu.rs  lib.rs  main.rs  mem.rs  ops.rs  ppu.rs  shader.wgsl  unofficial_ops.rs
src/cpu/: opcodes.rs
