[package]
name = "nesnes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28"
pixels = "0.13"
gilrs = "0.10"
lazy_static = "1.4"
bitflags = "2.4"
env_logger = "0.10"
log = "0.4"
clap = { version = "4.3", features = ["derive"] }
